@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.354 2011/11/12 11:19:00 markisch Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.354.2.1 2011/11/29 00:43:57 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -2229,11 +2229,10 @@ set_loadpath()
     if (END_OF_COMMAND) {
 	clear_loadpath();
     } else while (!END_OF_COMMAND) {
-	if (isstring(c_token)) {
-	    int len;
-	    char *ss = gp_alloc(token_len(c_token), "tmp storage");
-	    len = (collect? strlen(collect) : 0);
-	    quote_str(ss,c_token,token_len(c_token));
+	char *ss;
+	if ((ss = try_to_get_string())) {
+	    int len = (collect? strlen(collect) : 0);
+	    gp_expand_tilde(&ss);
 	    collect = gp_realloc(collect, len+1+strlen(ss)+1, "tmp loadpath");
 	    if (len != 0) {
 		strcpy(collect+len+1,ss);
@@ -2242,7 +2241,6 @@ set_loadpath()
 	    else
 		strcpy(collect,ss);
 	    free(ss);
-	    ++c_token;
 	} else {
 	    int_error(c_token, "expected string");
 	}
@@ -2267,11 +2265,10 @@ set_fontpath()
     if (END_OF_COMMAND) {
 	clear_fontpath();
     } else while (!END_OF_COMMAND) {
-	if (isstring(c_token)) {
-	    int len;
-	    char *ss = gp_alloc(token_len(c_token), "tmp storage");
-	    len = (collect? strlen(collect) : 0);
-	    quote_str(ss,c_token,token_len(c_token));
+	char *ss;
+	if ((ss = try_to_get_string())) {
+	    int len = (collect? strlen(collect) : 0);
+	    gp_expand_tilde(&ss);
 	    collect = gp_realloc(collect, len+1+strlen(ss)+1, "tmp fontpath");
 	    if (len != 0) {
 		strcpy(collect+len+1,ss);
@@ -2280,7 +2277,6 @@ set_fontpath()
 	    else
 		strcpy(collect,ss);
 	    free(ss);
-	    ++c_token;
 	} else {
 	    int_error(c_token, "expected string");
 	}
