@@ -3,6 +3,8 @@
 	* configure.in src/Makefile.am: Tweak autodetection of Qt utilities to
 	handle differences in the Qt 4.6 and 4.7 pkg-config files.
 
+	* src/set.c: Call gp_expand_tilde() in 'set loadpath' and 'set fontpath'.
+
 2012-01-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/hidden3d.c: Fix an uninitialized colorspec found by valgrind.
